Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     background-color: #f5f5f5; /* #556; */
     margin: 0;
-    overflow: hidden;
+    overflow: scroll;
     -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein .5s; /* Firefox < 16 */
      -ms-animation: fadein .5s; /* Internet Explorer */
